--- a/bot-battlr/src/App.css
+++ b/bot-battlr/src/App.css
@@ -12,10 +12,10 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #e3ff64aa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #bd61fbaa);
 }
 
 @keyframes logo-spin {
@@ -38,7 +38,7 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #9b8e1f;
 }
 
 
@@ -111,7 +111,7 @@ body {
 }
 
 .sort-bar-1 button {
-  background-color: #4CAF50;
+  background-color: #af4c7a;
   border: none;
   color: black;
   padding: 10px 20px;
@@ -126,7 +126,7 @@ body {
 }
 
 .sort-bar-1 button:hover {
-  background-color: #45a049;
+  background-color: #a04560;
 }
 .app-head{
   color: #141313;
@@ -174,7 +174,7 @@ body {
 }
 
 .bot-army-5 .bot-card-4 button {
-  background-color: #ff4136;
+  background-color: #ff9036;
   border: none;
   color: black;
   padding: 8px 16px;
@@ -190,7 +190,7 @@ body {
 }
 
 .bot-army-5 .bot-card-4 button:hover {
-  background-color: #d50000;
+  background-color: #00d5d5;
 }
 
 
@@ -199,7 +199,7 @@ body {
   display: block;
   text-align: center;
   margin-top: 20px;
-  color: #007bff;
+  color: #ff4800;
   text-decoration: none;
   font-weight: bold;
 }
